feat: the name is editable when boundary was uploaded via shapefile on project boundary page

--- a/templates/boundary/show-remove-preexisting.html
+++ b/templates/boundary/show-remove-preexisting.html
@@ -55,6 +55,12 @@
         document.querySelector('#preview-boundary-container').classList.add('hidden-element')
         hideSpinner()
     }
+
+    function shapeFileChange(self) {
+      // set the input element sent to backend when saved
+      BoundaryPayLoad.name = self.value
+      document.querySelector('#boundary-data').value = JSON.stringify(BoundaryPayLoad)
+    }
 </script>
 <div id="preview-boundary-container">
 
