--- a/templates/institutions/create-institution.html
+++ b/templates/institutions/create-institution.html
@@ -68,15 +68,6 @@
                 <label class="pad-top-1-5" for="country">Country</label><br>
                 {{ form.country }}
             </div>
-
-            <div class="w-50">
-                <label for="inquiry_type">Inquiry type<span class="orange-text required-label" title="">*</span></label>
-                <div class="tooltip"><strong>i</strong>
-                    <span class="tooltiptext left-tooltip">An institution inquiry type allows you to select the desired role for the subscription process.</span>
-                </div>
-                <br>
-                {{ subscription_form.inquiry_type }}
-            </div>
         </div>
 
         <div class="mt-8">
@@ -86,7 +77,25 @@
                 <div class="msg-red w-50"><small>{{ form.website.errors.as_text }}</small></div>
             {% endif %}
         </div>
-
+        <div class="w-100">
+            <div class="pad-top-1-5 radio-group mb-1p">
+                <label for="inquiry_type" class="inquiry-label">Inquiry Type<span class="orange-text required-label" title="">*</span></label>
+                <div class="tooltip"><strong>i</strong>
+                    <span class="tooltiptext">An institution inquiry type allows you to select the desired role for the subscription process.</span>
+                </div>
+                <br>
+                <div class="flex-this row ">
+                    <label class="radio-container w-50 mt-2p">
+                        <input class="pointer" type="radio" name="inquiry_type" value="subscriber">
+                        <span class="ml-5">Subscription</span>
+                    </label>
+                    <label class="radio-container w-50 mt-2p">
+                        <input class="pointer" type="radio" name="inquiry_type" value="cc_only">
+                        <span class="ml-5">Collections Care Notices</span>
+                    </label>
+                </div>
+            </div>
+        </div>
         <div class="w-100">
             <div class="pad-top-1-5">
                 <label for="description">Institution Description<span class="orange-text required-label" title="">*</span></label>
