--- a/templates/accounts/deactivate.html
+++ b/templates/accounts/deactivate.html
@@ -3,14 +3,12 @@
 {% block settings %}
 <form id="deactivateUserForm" method="POST">
 
-    <div class="flex-this column w-80   mr-1p">
-        <div><h3>Deactivate Your Profile</h3></div>
+    <div><h3>Deactivate Your Profile</h3></div>
 
-        <div class="w-70 mb-2p">
-            <p class="mt-0">Please note that you will not be able to sign-in after deactivation. Your profile and its associated data will be deleted 30 days after deactivation.</p>
-                {% csrf_token %}
-                <button id="submitDeactivation" class="primary-btn white-btn">Deactivate Profile</button>
-        </div>
+    <div class="mb-2p">
+        <p class="mt-0">Please note that you will not be able to sign-in after deactivation. Your profile and its associated data will be deleted 30 days after deactivation.</p>
+            {% csrf_token %}
+            <button id="submitDeactivation" class="primary-btn white-btn">Deactivate Profile</button>
     </div>
 
     <div id="deactivationModal" class="modal hide">
